# bulletinbird

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  go.sum  magefile.go
birds/: birds.go
birds/resources/: taxonomy.json
botd/: botd.go
cmd/birdboard-server/: BUILD.bazel  birdboard-server.go
cmd/botd-bot/: botd-bot.go
cmd/botd-bot/config/: config.go
cmd/botd-bot/mastodon/: mastodon.go
cmd/botd-bot/post/: post.go
cmd/botd-bot/post/resources/: bot-post-text.json
cmd/bulletinbird/: bulletinbird.go
cmd/bulletinbird-server/: bulletinbird-server.go
config/: config.go
config/resources/: pacifico-license.txt
internal/birds/: BUILD.bazel  birds.go  botd.go
internal/botd/: BUILD.bazel  botd.go
internal/config/: BUILD.bazel  config.go
internal/ebird/: BUILD.bazel  ebird.go
internal/img/: BUILD.bazel  img.go
tools/: BUILD.bazel  download-taxonomy.go  taxonomy.go
tools/download-taxonomy/: BUILD.bazel  download-taxonomy.go
tools/gen-botd/: gen-botd.go
tools/reset-botd/: BUILD.bazel  reset-botd.go
util/: error.go  file.go  goenv.go
