load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tools_lib",
    srcs = ["download-taxonomy.go"],
    importpath = "github.com/13-bit/birdboard/tools",
    visibility = ["//visibility:private"],
    deps = ["//internal/birds"],
)

go_binary(
    name = "tools",
    embed = [":tools_lib"],
    visibility = ["//visibility:public"],
)
