load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "birdboard-server_lib",
    srcs = ["birdboard-server.go"],
    importpath = "github.com/13-bit/birdboard/cmd/birdboard-server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/botd",
        "//internal/config",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "birdboard-server",
    embed = [":birdboard-server_lib"],
    visibility = ["//visibility:public"],
)
