load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "botd",
    srcs = ["botd.go"],
    embedsrcs = [
        "resources/life-history-template.png",
        "resources/botd-mask.png",
    ],
    importpath = "github.com/13-bit/birdboard/internal/botd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/birds",
        "//internal/config",
        "//internal/img",
        "@com_github_cavaliergopher_grab_v3//:grab",
        "@com_github_disintegration_imaging//:imaging",
        "@com_github_skip2_go_qrcode//:go-qrcode",
    ],
)
