load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "reset-botd_lib",
    srcs = ["reset-botd.go"],
    importpath = "github.com/13-bit/birdboard/tools/reset-botd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/birds",
        "//internal/botd",
        "//internal/config",
    ],
)

go_binary(
    name = "reset-botd",
    embed = [":reset-botd_lib"],
    visibility = ["//visibility:public"],
)
